--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-react": "^4.0.3",
-        "autoprefixer": "^10.4.12",
+        "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
-        "postcss": "^8.4.18",
+        "postcss": "^8.4.31",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "tailwindcss": "^3.2.1",
+        "tailwindcss": "^3.3.5",
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "flowbite": "^2.0.0"
+        "@heroicons/react": "^2.0.18",
+        "@inertiajs/progress": "^0.2.7",
+        "flowbite": "^2.0.0",
+        "lucide-react": "^0.291.0",
+        "primeicons": "^6.0.1",
+        "primereact": "^10.0.9",
+        "react-number-format": "^5.3.1",
+        "sweetalert2": "^11.9.0",
+        "toastr": "^2.1.4"
     }
 }
