--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "lucide-react": "^0.291.0",
         "primeicons": "^6.0.1",
         "primereact": "^10.0.9",
+        "react-data-table-component": "^7.5.4",
         "react-number-format": "^5.3.1",
+        "react-table": "^7.8.0",
         "sweetalert2": "^11.9.0",
         "toastr": "^2.1.4"
     }
