--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react-data-table-component": "^7.5.4",
         "react-number-format": "^5.3.1",
         "react-table": "^7.8.0",
+        "styled-components": "^6.1.1",
         "sweetalert2": "^11.9.0",
         "toastr": "^2.1.4"
     }
