--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "primereact": "^10.0.9",
         "react-data-table-component": "^7.5.4",
         "react-number-format": "^5.3.1",
+        "react-select": "^5.8.0",
         "react-table": "^7.8.0",
         "styled-components": "^6.1.1",
         "sweetalert2": "^11.9.0",
