--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@inertiajs/progress": "^0.2.7",
         "flowbite": "^2.0.0",
         "lucide-react": "^0.291.0",
+        "moment": "^2.29.4",
         "primeicons": "^6.0.1",
         "primereact": "^10.0.9",
         "react-data-table-component": "^7.5.4",
