--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@heroicons/react": "^2.0.18",
         "@inertiajs/progress": "^0.2.7",
         "flowbite": "^2.0.0",
+        "highcharts-react-official": "^3.2.1",
         "lucide-react": "^0.291.0",
         "moment": "^2.29.4",
         "primeicons": "^6.0.1",
