--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "midtrans/midtrans-php": "^2.5",
+        "spatie/laravel-permission": "^6.7",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
